2008-08-07 Ingo Renner  <ingo@typo3.org>

	* initial code generated with kickstarter